--- a/src/index.css
+++ b/src/index.css
@@ -131,6 +131,15 @@
   }
 }
 
-*{
+* {
   font-family: var(--poppins-font);
+}
+
+html,
+body,
+#main-scroll {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  /* overflow: hidden; */
 }
